Section .conteudo adicionada a página mobile.

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -7,7 +7,7 @@
     <title>MOBILE</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img src="" alt="Logo do projeto">
         <nav>
             <ul>
@@ -17,5 +17,21 @@
             </ul>
         </nav>
     </header>
+
+    <section class="conteudo">
+        <h2>
+            MOBILE.
+        </h2>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sit provident autem enim aperiam a ratione sint voluptatum accusantium, quas eos rem voluptatem unde iure laudantium facilis praesentium incidunt consequatur, rerum corrupti reprehenderit hic inventore! Quae, ipsum rerum, recusandae, nihil voluptatibus tempore voluptates non ab aliquam repellat ex. Obcaecati ad dolore error reprehenderit porro ea illo ratione quia similique, repellendus quas id accusantium, quasi quos et odio labore delectus odit recusandae tenetur, in debitis impedit. Ullam illum aliquid vitae libero? Similique harum, dolor ut, architecto quis voluptatum repellat quasi est temporibus magni commodi iure laboriosam totam quaerat voluptatem quidem, nulla quas officiis cupiditate. Voluptatem corrupti cupiditate ipsam sapiente officia beatae saepe temporibus illo expedita enim possimus fugiat optio quia molestiae atque nesciunt iste ex doloribus, sint laudantium! A animi nisi voluptatem quasi dolorum delectus quod vitae in possimus nam? Eius similique nihil quas excepturi maiores dolorem consequatur reiciendis sint eveniet?
+        </p>
+
+        <figure>
+            <img src="" alt="">
+            <figcaption>
+                
+            </figcaption>
+        </figure>
+    </section>
 </body>
 </html>
