Footer .rodape adicionado a página mobile.

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -29,9 +29,18 @@
         <figure>
             <img src="" alt="">
             <figcaption>
-                
+
             </figcaption>
         </figure>
     </section>
+
+    <footer class="rodape">
+        <h2>REDES SOCIAIS</h2>
+        <nav>
+            <a href=""> <img src="" alt="GitHub"></a>
+            <a href=""> <img src="" alt="Facebook"></a>
+            <a href=""> <img src="" alt="Twitter"></a>
+        </nav>
+    </footer>
 </body>
 </html>
