--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tecnologia</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="cabecalho">
-        <img src="" alt="Logo do projeto">
-        <nav>
-            <ul>
-                <li><a href="../index.html"></a></li>
-                <li><a href="#GAMES"></a></li>
-                <li><a href="./mobile.html"></a></li>
-            </ul>
-        </nav> 
-</body>
+      <img src="" alt="Logo do projeto" />
+      <nav>
+        <ul>
+          <li><a href="../index.html"></a></li>
+          <li><a href="#GAMES"></a></li>
+          <li><a href="./mobile.html"></a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="conteudo">
+      <h2>TECNOLOGIA.</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magni
+        corrupti totam alias culpa, nisi excepturi quae debitis dignissimos
+        laborum magnam hic at temporibus, dolorum eaque ut ullam eos sequi!
+      </p>
+
+      <figure>
+        <img src="" alt="" />
+        <figcaption></figcaption>
+      </figure>
+    </section>
+  </body>
 </html>
