--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tecnologia</title>
+    <title>TECNOLOGIA</title>
   </head>
   <body>
     <header class="cabecalho">
-      <img src="" alt="Logo do projeto" />
+      <img src="" alt="" />
       <nav>
         <ul>
-          <li><a href="../index.html"></a></li>
-          <li><a href="#GAMES"></a></li>
-          <li><a href="./mobile.html"></a></li>
+          <li><a href="../index.html">Tela inicial</a></li>
+          <li><a href="#GAMES"></a>Games</li>
+          <li><a href="./mobile.html">Mobile</a></li>
         </ul>
       </nav>
     </header>
     <section class="conteudo">
       <h2>TECNOLOGIA.</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magni
-        corrupti totam alias culpa, nisi excepturi quae debitis dignissimos
-        laborum magnam hic at temporibus, dolorum eaque ut ullam eos sequi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim,
+        obcaecati, vitae consequuntur nesciunt voluptatem consectetur doloribus
+        voluptas tempore modi minima explicabo nulla repudiandae culpa aliquid
+        ea tempora natus, voluptates nostrum odit! Ipsa unde ipsam laboriosam
+        voluptates alias culpa debitis sapiente illo, quas, nisi repellendus
+        dignissimos ut tempora, cum asperiores eligendi.
       </p>
 
       <figure>
@@ -30,5 +33,13 @@
         <figcaption></figcaption>
       </figure>
     </section>
+    <footer class="rodape">
+      <h2>REDES SOCIAIS</h2>
+      <nav>
+        <a href=""><i class="fa-brands fa-github">GitHub</i></a>
+        <a href=""><i class="fab fa-facebook-f">Facebook</i></a>
+        <a href=""><i class="fa-brands fa-twitter">Twitter</i></a>
+      </nav>
+    </footer>
   </body>
 </html>
