Inserindo os textos no <p>

--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="cabecalho">
+      <img src="" alt="Logo do projeto" />
       <img src="" alt="" />
       <nav>
         <ul>
@@ -20,12 +21,20 @@
     <section class="conteudo">
       <h2>TECNOLOGIA.</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim,
-        obcaecati, vitae consequuntur nesciunt voluptatem consectetur doloribus
-        voluptas tempore modi minima explicabo nulla repudiandae culpa aliquid
-        ea tempora natus, voluptates nostrum odit! Ipsa unde ipsam laboriosam
-        voluptates alias culpa debitis sapiente illo, quas, nisi repellendus
-        dignissimos ut tempora, cum asperiores eligendi.
+        Tecnologia é o conjunto de conhecimentos, técnicas e processos
+        utilizados para criar, desenvolver, implementar e manter produtos,
+        serviços e sistemas que visam atender às necessidades humanas. A
+        tecnologia tem um papel fundamental na sociedade moderna, pois
+        possibilita a criação de soluções inovadoras para problemas complexos em
+        diversas áreas, como comunicação, transporte, saúde, educação, entre
+        outras.
+      </p>
+      <p>
+        A tecnologia está presente em diversos aspectos do nosso cotidiano,
+        desde o uso de smartphones e computadores até o funcionamento de
+        complexos sistemas de transporte e infraestrutura urbana. Através da
+        tecnologia, é possível melhorar a qualidade de vida das pessoas,
+        facilitar processos e tornar o mundo mais conectado e globalizado.
       </p>
 
       <figure>
@@ -36,9 +45,9 @@
     <footer class="rodape">
       <h2>REDES SOCIAIS</h2>
       <nav>
-        <a href=""><i class="fa-brands fa-github">GitHub</i></a>
-        <a href=""><i class="fab fa-facebook-f">Facebook</i></a>
-        <a href=""><i class="fa-brands fa-twitter">Twitter</i></a>
+        <a href=""> <img src="" alt="GitHub" /></a>
+        <a href=""> <img src="" alt="Facebook" /></a>
+        <a href=""> <img src="" alt="Twitter" /></a>
       </nav>
     </footer>
   </body>
