gitignore, imagens e icones adicionados.

--- a/pages/games.html
+++ b/pages/games.html
@@ -4,12 +4,12 @@
 	<title>Games</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header>
 		<div class="logo">
-			<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Logo">
+			<img src="../img/home.svg" alt="Logo">
 		</div>
 		<nav>
 			<ul>
@@ -20,32 +20,34 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="content">
-		<div class="games">
-			<h2>GAMES</h2>
-			<p>Este é o texto introdutório sobre games.</p>
-			<figure>
-				<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de games">
-				<figcaption>Legenda da imagem de games.</figcaption>
-			</figure>
-		</div>
-		<div class="mobile">
-			<h2>MOBILE</h2>
-			<p>Este é o texto introdutório sobre mobile.</p>
-			<figure>
-				<img src="mobile.jpg" alt="Imagem de mobile">
-				<figcaption>Legenda da imagem de mobile.</figcaption>
-			</figure>
-		</div>
-		<div class="tecnologia">
-			<h2>TECNOLOGIA</h2>
-			<p>Este é o texto introdutório sobre tecnologia.</p>
-			<figure>
-				<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de tecnologia">
-				<figcaption>Legenda da imagem de tecnologia.</figcaption>
-			</figure>
-		</div>
-	</section>
+		<main>
+			<section class="content">
+				<div class="games">
+					<h2>GAMES</h2>
+					<p>Este é o texto introdutório sobre games.</p>
+					<figure>
+						<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de games">
+						<figcaption>Legenda da imagem de games.</figcaption>
+					</figure>
+				</div>
+				<div class="mobile">
+					<h2>MOBILE</h2>
+					<p>Este é o texto introdutório sobre mobile.</p>
+					<figure>
+						<img src="mobile.jpg" alt="Imagem de mobile">
+						<figcaption>Legenda da imagem de mobile.</figcaption>
+					</figure>
+				</div>
+				<div class="tecnologia">
+					<h2>TECNOLOGIA</h2>
+					<p>Este é o texto introdutório sobre tecnologia.</p>
+					<figure>
+						<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de tecnologia">
+						<figcaption>Legenda da imagem de tecnologia.</figcaption>
+					</figure>
+				</div>
+			</section>
+		</main>
 	<footer>
 		<h2>Redes sociais</h2>
 		<nav>
