imagens, icones e texto adicionados a página games

--- a/pages/games.html
+++ b/pages/games.html
@@ -24,26 +24,16 @@
 			<section class="content">
 				<div class="games">
 					<h2>GAMES</h2>
-					<p>Este é o texto introdutório sobre games.</p>
+					<p>
+						Um videogame é um tipo de entretenimento eletrônico que envolve a interação do jogador com um ambiente virtual por meio de um dispositivo de controle. Os videogames geralmente apresentam uma narrativa ou objetivo que o jogador deve seguir, seja sozinho ou em conjunto com outros jogadores online.
+
+						Os videogames podem ser jogados em diversos dispositivos, como consoles de jogos, computadores pessoais, smartphones e tablets. Eles são projetados para serem visualmente atraentes e imersivos, com gráficos, animações e efeitos sonoros realistas.
+						
+						Os jogos podem ser classificados em diferentes categorias, como ação, aventura, RPG, esportes, simulação e quebra-cabeças, entre outros. Cada categoria tem suas próprias regras e mecânicas de jogo específicas, criando uma variedade de experiências de jogo para os jogadores.
+					</p>
 					<figure>
-						<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de games">
-						<figcaption>Legenda da imagem de games.</figcaption>
-					</figure>
-				</div>
-				<div class="mobile">
-					<h2>MOBILE</h2>
-					<p>Este é o texto introdutório sobre mobile.</p>
-					<figure>
-						<img src="mobile.jpg" alt="Imagem de mobile">
-						<figcaption>Legenda da imagem de mobile.</figcaption>
-					</figure>
-				</div>
-				<div class="tecnologia">
-					<h2>TECNOLOGIA</h2>
-					<p>Este é o texto introdutório sobre tecnologia.</p>
-					<figure>
-						<img src="https://scontent.fcgh9-1.fna.fbcdn.net/v/t1.6435-9/143547463_238265634539001_2301444453076226802_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjajWMd60btEn-dgRDG4K3vLZQFKlhVw-8tlAUqWFXD7pplyTglYHqm8RFVoB8LnFAyiAPUm349kc5lV0yLys2&_nc_ohc=R7hGJWyIpqwAX9x2L_u&_nc_ht=scontent.fcgh9-1.fna&oh=00_AfD64M9X7IaWgz7eumE-C2v80dwUu1Yr8DdR_aYDWU0ZqA&oe=64726CEA" alt="Imagem de tecnologia">
-						<figcaption>Legenda da imagem de tecnologia.</figcaption>
+						<img src="../img/games-2.svg" alt="Imagem de games">
+						<figcaption>Ilustração de pessoa jogando.</figcaption>
 					</figure>
 				</div>
 			</section>
@@ -51,9 +41,9 @@
 	<footer>
 		<h2>Redes sociais</h2>
 		<nav>
-			<a href="https://github.com"><img src="github.png" alt="GitHub"></a>
-			<a href="https://facebook.com"><img src="facebook.png" alt="Facebook"></a>
-			<a href="https://twitter.com"><img src="twitter.png" alt="Twitter"></a>
+			<a href="https://github.com"><img src="../img/github-blue.svg" alt="GitHub"></a>
+			<a href="https://facebook.com"><img src="../img/facebook-blue.svg" alt="Facebook"></a>
+			<a href="https://twitter.com"><img src="../img/twitter-blue.svg" alt="Twitter"></a>
 		</nav>
 	</footer>
 </body>
