--- a/pages/games.html
+++ b/pages/games.html
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Games</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<head>
-	<title>Games</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/style.css">
-</head>
-
-<body>
-	<header>
-		<div class="logo">
-			<img src="../img/home.svg" alt="Logo">
-		</div>
-		<nav>
-			<ul>
-				<li><a href="/index.html">Principal</a></li>
-				<li><a href="../pages/games.html">Games</a></li>
-				<li><a href="../pages/mobile.html">Mobile</a></li>
-				<li><a href="../pages/tecnologia.html">Tecnologia</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section class="content">
-			<h2>GAMES</h2>
-			<p>
-				Um videogame é um tipo de entretenimento eletrônico que envolve a interação do jogador com um ambiente
-				virtual por meio de um dispositivo de controle. Os videogames geralmente apresentam uma narrativa ou
-				objetivo que o jogador deve seguir, seja sozinho ou em conjunto com outros jogadores online.
-
-				Os videogames podem ser jogados em diversos dispositivos, como consoles de jogos, computadores pessoais,
-				smartphones e tablets. Eles são projetados para serem visualmente atraentes e imersivos, com gráficos,
-				animações e efeitos sonoros realistas.
-
-				Os jogos podem ser classificados em diferentes categorias, como ação, aventura, RPG, esportes, simulação
-				e quebra-cabeças, entre outros. Cada categoria tem suas próprias regras e mecânicas de jogo específicas,
-				criando uma variedade de experiências de jogo para os jogadores.
-			</p>
-			<figure>
-				<img src="../img/games-2.svg" alt="Pessoa jogando videogames no sofa">
-				<figcaption>Ilustração de pessoa jogando.</figcaption>
-			</figure>
-		</section>
-	</main>
-	<footer class="">
-		<div class="redes-sociais">
-			<h2>Redes Sociais</h2>
-			<nav>
-				<a href="https://github.com"><img src="../img/github-blue.svg" alt="GitHub"></a>
-				<a href="https://facebook.com"><img src="../img/facebook-blue.svg" alt="Facebook"></a>
-				<a href="https://twitter.com"><img src="../img/twitter-blue.svg" alt="Twitter"></a>
-			</nav>
-		</div>
-	</footer>
-</body>
-
+  <body>
+    <header>
+      <div class="logo">
+        <img src="../img/home.svg" alt="Logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Principal</a></li>
+          <li><a href="./games.html">Games</a></li>
+          <li><a href="./mobile.html">Mobile</a></li>
+          <li><a href="./tecnologia.html">Tecnologia</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="content">
+        <h2>GAMES</h2>
+        <p>
+          Um videogame é um tipo de entretenimento eletrônico que envolve a
+          interação do jogador com um ambiente virtual por meio de um
+          dispositivo de controle. Os videogames geralmente apresentam uma
+          narrativa ou objetivo que o jogador deve seguir, seja sozinho ou em
+          conjunto com outros jogadores online. Os videogames podem ser jogados
+          em diversos dispositivos, como consoles de jogos, computadores
+          pessoais, smartphones e tablets. Eles são projetados para serem
+          visualmente atraentes e imersivos, com gráficos, animações e efeitos
+          sonoros realistas. Os jogos podem ser classificados em diferentes
+          categorias, como ação, aventura, RPG, esportes, simulação e
+          quebra-cabeças, entre outros. Cada categoria tem suas próprias regras
+          e mecânicas de jogo específicas, criando uma variedade de experiências
+          de jogo para os jogadores.
+        </p>
+        <figure>
+          <img
+            src="../img/games-2.svg"
+            alt="Pessoa jogando videogames no sofa"
+          />
+          <figcaption>Ilustração de pessoa jogando.</figcaption>
+        </figure>
+      </section>
+    </main>
+    <footer class="">
+      <div class="redes-sociais">
+        <h2>Redes Sociais</h2>
+        <nav>
+          <a href="https://github.com"
+            ><img src="../img/github-blue.svg" alt="GitHub"
+          /></a>
+          <a href="https://facebook.com"
+            ><img src="../img/facebook-blue.svg" alt="Facebook"
+          /></a>
+          <a href="https://twitter.com"
+            ><img src="../img/twitter-blue.svg" alt="Twitter"
+          /></a>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
