--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">Principal</a></li>
-                <li><a href="../pages/games.html">Games</a></li>
-                <li><a href="../pages/mobile.html">Mobile</a></li>
-                <li><a href="../pages/tecnologia.html">Tecnologia</a></li>
+                <li><a href="../index.html">Principal</a></li>
+          <li><a href="./games.html">Games</a></li>
+          <li><a href="./mobile.html">Mobile</a></li>
+          <li><a href="./tecnologia.html">Tecnologia</a></li>
             </ul>
         </nav>
     </header>
