--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -14,12 +14,13 @@
         <div class="logo">
             <img src="../img/home.svg" alt="Logo do projeto">
         </div>
+        <h1>CHECKPOINT</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Principal</a></li>
-          <li><a href="./games.html">Games</a></li>
-          <li><a href="./mobile.html">Mobile</a></li>
-          <li><a href="./tecnologia.html">Tecnologia</a></li>
+                <li><a href="./games.html">Games</a></li>
+                <li><a href="./mobile.html">Mobile</a></li>
+                <li><a href="./tecnologia.html">Tecnologia</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +44,14 @@
             <figure>
                 <img src="../img/mobile-2.svg" alt="Pessoa usando o celular">
                 <figcaption>
-                    Ilustração de dispositivos móveis
+                    Os dispositivos mobile, como smartphones e tablets, trazem diversos benefícios para os usuários.
+                    Eles permitem que as pessoas se conectem com facilidade com amigos e familiares, além de acessar
+                    informações e entretenimento em qualquer lugar e a qualquer momento. Os dispositivos móveis também
+                    têm a capacidade de aumentar a produtividade, permitindo que as pessoas realizem tarefas importantes
+                    enquanto estão em trânsito. Além disso, eles oferecem novas formas de aprendizado e comunicação,
+                    ampliando as possibilidades de interação social e cultural. Por fim, os dispositivos móveis também
+                    podem ser uma ferramenta importante para a inclusão digital, permitindo que mais pessoas acessem a
+                    internet e suas oportunidades.
                 </figcaption>
             </figure>
         </section>
