format and add css class

--- a/pages/games.html
+++ b/pages/games.html
@@ -1,78 +1,91 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Games</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<head>
-  <title>Games</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../css/style.css" />
-</head>
-
-<body>
-  <header>
-    <div class="logo">
-      <img src="../img/home.svg" alt="Logo" />
-    </div>
-    <h1>CHECKPOINT</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Principal</a></li>
-        <li><a href="./games.html">Games</a></li>
-        <li><a href="./mobile.html">Mobile</a></li>
-        <li><a href="./tecnologia.html">Tecnologia</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="content">
-      <h2>GAMES</h2>
-      <p>
-        Um videogame é um tipo de entretenimento eletrônico que envolve a interação do jogador com um ambiente virtual
-        por meio de um dispositivo de controle. Os videogames geralmente apresentam uma narrativa ou objetivo que o
-        jogador deve seguir, seja sozinho ou em conjunto com outros jogadores online.
-
-
-        Os videogames podem ser jogados em diversos dispositivos, como consoles de jogos, computadores pessoais,
-        smartphones e tablets. Eles são projetados para serem visualmente atraentes e imersivos, com gráficos, animações
-        e efeitos sonoros realistas.
-
-        Os jogos podem ser classificados em diferentes categorias, como ação, aventura, RPG, esportes, simulação e
-        quebra-cabeças, entre outros. Cada categoria tem suas próprias regras e mecânicas de jogo específicas, criando
-        uma variedade de experiências de jogo para os jogadores.
-
-        Os videogames também evoluíram para se tornarem uma forma de arte, com jogos que apresentam histórias complexas
-        e emocionantes, personagens cativantes e gráficos incríveis. Alguns jogos até se tornaram fenômenos culturais,
-        com jogadores em todo o mundo se reunindo para competir em torneios e eventos de jogos.
-
-        Além disso, os videogames têm sido usados em diversas áreas, como educação, treinamento militar e até mesmo na
-        terapia. Eles têm sido úteis para ajudar as pessoas a desenvolver habilidades como tomada de decisões, resolução
-        de problemas e trabalho em equipe.
-
-        Em resumo, um videogame é uma forma de entretenimento interativo eletrônico que permite aos jogadores mergulhar
-        em mundos virtuais emocionantes e desafiadores. Eles oferecem aos jogadores uma ampla variedade de experiências,
-        desde jogos de ação intensos até jogos educativos relaxantes.
-      </p>
-      <figure>
-        <img src="../img/games-2.svg" alt="Pessoa jogando videogames no sofa" />
-        <figcaption>Os videogames podem trazer diversos benefícios para os jogadores. Um deles é o desenvolvimento de
-          habilidades cognitivas, como raciocínio lógico, memória e tomada de decisões. Além disso, jogos que envolvem
-          atividades físicas podem contribuir para a saúde e condicionamento físico dos jogadores. Jogos de estratégia
-          também podem ajudar a desenvolver habilidades de liderança e trabalho em equipe. Por fim, jogos educativos
-          podem ser uma ferramenta útil no aprendizado de conceitos complexos de forma interativa e divertida.
-        </figcaption>
-      </figure>
-    </section>
-  </main>
-  <footer class="">
-    <div class="redes-sociais">
-      <h2>Redes Sociais</h2>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="./img/home.svg" alt="Logo do Blog" width="100" />
+        <h1>CHECKPOINT</h1>
+      </div>
       <nav>
-        <a href="https://github.com"><img src="../img/github-blue.svg" alt="GitHub" /></a>
-        <a href="https://facebook.com"><img src="../img/facebook-blue.svg" alt="Facebook" /></a>
-        <a href="https://twitter.com"><img src="../img/twitter-blue.svg" alt="Twitter" /></a>
+        <ul>
+          <li><a href="../index.html">Principal</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
+          <li><a href="tecnologia.html">Tecnologia</a></li>
+        </ul>
       </nav>
-    </div>
-  </footer>
-</body>
-
+    </header>
+    <main>
+      <section class="content">
+        <h2>GAMES</h2>
+        <p>
+          Um videogame é um tipo de entretenimento eletrônico que envolve a
+          interação do jogador com um ambiente virtual por meio de um
+          dispositivo de controle. Os videogames geralmente apresentam uma
+          narrativa ou objetivo que o jogador deve seguir, seja sozinho ou em
+          conjunto com outros jogadores online. Os videogames podem ser jogados
+          em diversos dispositivos, como consoles de jogos, computadores
+          pessoais, smartphones e tablets. Eles são projetados para serem
+          visualmente atraentes e imersivos, com gráficos, animações e efeitos
+          sonoros realistas. Os jogos podem ser classificados em diferentes
+          categorias, como ação, aventura, RPG, esportes, simulação e
+          quebra-cabeças, entre outros. Cada categoria tem suas próprias regras
+          e mecânicas de jogo específicas, criando uma variedade de experiências
+          de jogo para os jogadores. Os videogames também evoluíram para se
+          tornarem uma forma de arte, com jogos que apresentam histórias
+          complexas e emocionantes, personagens cativantes e gráficos incríveis.
+          Alguns jogos até se tornaram fenômenos culturais, com jogadores em
+          todo o mundo se reunindo para competir em torneios e eventos de jogos.
+          Além disso, os videogames têm sido usados em diversas áreas, como
+          educação, treinamento militar e até mesmo na terapia. Eles têm sido
+          úteis para ajudar as pessoas a desenvolver habilidades como tomada de
+          decisões, resolução de problemas e trabalho em equipe. Em resumo, um
+          videogame é uma forma de entretenimento interativo eletrônico que
+          permite aos jogadores mergulhar em mundos virtuais emocionantes e
+          desafiadores. Eles oferecem aos jogadores uma ampla variedade de
+          experiências, desde jogos de ação intensos até jogos educativos
+          relaxantes.
+        </p>
+        <figure class="article-figure">
+          <img
+            src="../img/games-2.svg"
+            alt="Pessoa jogando videogames no sofa"
+          />
+          <figcaption>
+            Os videogames podem trazer diversos benefícios para os jogadores. Um
+            deles é o desenvolvimento de habilidades cognitivas, como raciocínio
+            lógico, memória e tomada de decisões. Além disso, jogos que envolvem
+            atividades físicas podem contribuir para a saúde e condicionamento
+            físico dos jogadores. Jogos de estratégia também podem ajudar a
+            desenvolver habilidades de liderança e trabalho em equipe. Por fim,
+            jogos educativos podem ser uma ferramenta útil no aprendizado de
+            conceitos complexos de forma interativa e divertida.
+          </figcaption>
+        </figure>
+      </section>
+    </main>
+    <footer class="">
+      <div class="redes-sociais">
+        <h2>Redes Sociais</h2>
+        <nav>
+          <a href="https://github.com"
+            ><img src="../img/github-blue.svg" alt="GitHub"
+          /></a>
+          <a href="https://facebook.com"
+            ><img src="../img/facebook-blue.svg" alt="Facebook"
+          /></a>
+          <a href="https://twitter.com"
+            ><img src="../img/twitter-blue.svg" alt="Twitter"
+          /></a>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
