--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -1,67 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TECNOLOGIA</title>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TECNOLOGIA</title>
-  <link rel="stylesheet" href="../css/style.css" />
-</head>
-
-<body>
-  <header>
-    <div class="logo">
-      <img src="../img/home.svg" alt="Logo do projeto" />
-    </div>
-    <h1>CHECKPOINT</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Principal</a></li>
-        <li><a href="./games.html">Games</a></li>
-        <li><a href="./mobile.html">Mobile</a></li>
-        <li><a href="./tecnologia.html">Tecnologia</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="content">
-    <h2>TECNOLOGIA.</h2>
-    <p>
-      Tecnologia é o conjunto de conhecimentos, técnicas e processos
-      utilizados para criar, desenvolver, implementar e manter produtos,
-      serviços e sistemas que visam atender às necessidades humanas. A
-      tecnologia tem um papel fundamental na sociedade moderna, pois
-      possibilita a criação de soluções inovadoras para problemas complexos em
-      diversas áreas, como comunicação, transporte, saúde, educação, entre
-      outras. A tecnologia está presente em diversos aspectos do nosso
-      cotidiano, desde o uso de smartphones e computadores até o funcionamento
-      de complexos sistemas de transporte e infraestrutura urbana. Através da
-      tecnologia, é possível melhorar a qualidade de vida das pessoas,
-      facilitar processos e tornar o mundo mais conectado e globalizado.
-    </p>
-
-    <figure>
-      <img src="../img/tech-2.svg" alt="Pessoa Programando" />
-      <figcaption>
-        A tecnologia traz diversos benefícios para a sociedade em geral. Ela permite que as pessoas se conectem mais
-        facilmente, compartilhando informações e conhecimentos de forma rápida e eficiente. A tecnologia também
-        possibilita que as empresas aumentem sua produtividade e alcancem novos mercados, gerando mais empregos e
-        crescimento econômico. Além disso, a tecnologia pode melhorar a qualidade de vida das pessoas, oferecendo
-        soluções inovadoras em áreas como saúde, mobilidade e energia. Por fim, a tecnologia também pode ajudar na
-        preservação do meio ambiente, oferecendo alternativas sustentáveis para diversos setores da economia.
-      </figcaption>
-    </figure>
-  </section>
-  <footer>
-    <div class="redes-sociais">
-      <h2>Redes Sociais</h2>
+  <body>
+    <header>
+      <a class="logo" href="../index.html">
+        <img src="../img/home.svg" alt="Logo do Blog" width="100" />
+        <h1>CHECKPOINT</h1>
+      </a>
       <nav>
-        <a href="https://github.com"><img src="../img/github-blue.svg" alt="GitHub" /></a>
-        <a href="https://facebook.com"><img src="../img/facebook-blue.svg" alt="Facebook" /></a>
-        <a href="https://twitter.com"><img src="../img/twitter-blue.svg" alt="Twitter" /></a>
+        <ul>
+          <li><a href="../index.html">Principal</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
+          <li><a href="tecnologia.html">Tecnologia</a></li>
+        </ul>
       </nav>
-    </div>
-  </footer>
-</body>
+    </header>
+    <section class="content">
+      <h2>TECNOLOGIA.</h2>
+      <p>
+        Tecnologia é o conjunto de conhecimentos, técnicas e processos
+        utilizados para criar, desenvolver, implementar e manter produtos,
+        serviços e sistemas que visam atender às necessidades humanas. A
+        tecnologia tem um papel fundamental na sociedade moderna, pois
+        possibilita a criação de soluções inovadoras para problemas complexos em
+        diversas áreas, como comunicação, transporte, saúde, educação, entre
+        outras. A tecnologia está presente em diversos aspectos do nosso
+        cotidiano, desde o uso de smartphones e computadores até o funcionamento
+        de complexos sistemas de transporte e infraestrutura urbana. Através da
+        tecnologia, é possível melhorar a qualidade de vida das pessoas,
+        facilitar processos e tornar o mundo mais conectado e globalizado.
+      </p>
 
+      <figure class="article-figure">
+        <img src="../img/tech-2.svg" alt="Pessoa Programando" />
+        <figcaption>
+          A tecnologia traz diversos benefícios para a sociedade em geral. Ela
+          permite que as pessoas se conectem mais facilmente, compartilhando
+          informações e conhecimentos de forma rápida e eficiente. A tecnologia
+          também possibilita que as empresas aumentem sua produtividade e
+          alcancem novos mercados, gerando mais empregos e crescimento
+          econômico. Além disso, a tecnologia pode melhorar a qualidade de vida
+          das pessoas, oferecendo soluções inovadoras em áreas como saúde,
+          mobilidade e energia. Por fim, a tecnologia também pode ajudar na
+          preservação do meio ambiente, oferecendo alternativas sustentáveis
+          para diversos setores da economia.
+        </figcaption>
+      </figure>
+    </section>
+    <footer>
+      <div class="redes-sociais">
+        <h2>Redes Sociais</h2>
+        <nav>
+          <a href="https://github.com"
+            ><img src="../img/github-blue.svg" alt="GitHub"
+          /></a>
+          <a href="https://facebook.com"
+            ><img src="../img/facebook-blue.svg" alt="Facebook"
+          /></a>
+          <a href="https://twitter.com"
+            ><img src="../img/twitter-blue.svg" alt="Twitter"
+          /></a>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
