Correção do logo na página games.

--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <section class="content">
-      <h2>TECNOLOGIA.</h2>
+      <h2>TECNOLOGIA</h2>
       <p>
         Tecnologia é o conjunto de conhecimentos, técnicas e processos
         utilizados para criar, desenvolver, implementar e manter produtos,
