--- a/pages/games.html
+++ b/pages/games.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="./img/home.svg" alt="Logo do Blog" width="100" />
+        <img src="../img/home.svg" alt="Logo do Blog" width="100" />
         <h1>CHECKPOINT</h1>
       </div>
       <nav>
